Collapsable fix

--- a/apps/cards/src/app/modules/shared/components/collapsible/collapsible.component.scss
+++ b/apps/cards/src/app/modules/shared/components/collapsible/collapsible.component.scss
@@ -11,9 +11,6 @@
     &__content {
         transition: 0.2s ease-in-out;
         overflow: hidden;
-        &--collapsed {
-            max-height: 0!important;
-        }
     }
     &--inclusive {
         background: var(--acticity-background);
